--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
   transition: 0.3s;
   width: 40%;
   border-radius: 5px;
-  margin-left: 30%;
-  margin-top: 5%;
+  margin-left: 10%;
+  margin-top: 2%;
   text-align: center;
 }
 
@@ -18,5 +18,119 @@
 
 .logo {
   width: 100%;
-  height: 25%;
+  height: 15%;
+}
+
+.logo-img {
+  width: 10%;
+  height: 10%;
+}
+.heading-1 {
+  width: 100%;
+  height: auto;
+  padding: 0;
+  /*border: solid black 3px;*/
+  font-size: 35px;
+  font-weight: lighter;
+  margin-bottom: 4%;
+}
+.auth {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  margin-bottom: 2%;
+}
+.samp-text {
+  margin-bottom: 2%;
+}
+.gs {
+  height: 100%;
+  width: 100%;
+}
+.fs {
+  height: 100%;
+  width: 100%;
+  background-color: white;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.1);
+  border: none;
+  cursor: pointer;
+}
+.ic {
+  color: blue;
+  margin: 10px;
+}
+
+.decorated {
+  overflow: hidden;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.3);
+  margin-bottom: 2%;
+}
+.decorated > span {
+  position: relative;
+  display: inline-block;
+}
+.decorated > span:before,
+.decorated > span:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  border-bottom: 2px solid;
+  width: 100vw;
+  margin: 0 5px;
+}
+.decorated > span:before {
+  right: 100%;
+}
+.decorated > span:after {
+  left: 100%;
+}
+.inp-div {
+  width: 100%;
+  margin-bottom: 2%;
+}
+.inp {
+  width: 80%;
+  margin-bottom: 2%;
+  height: 35px;
+  border: black 2px solid;
+  margin-left: 10%;
+}
+.ele {
+  width: 95%;
+  height: 85%;
+  margin: 0;
+  border: none;
+  outline: none;
+}
+.ele-pass {
+  width: 88%;
+  height: 85%;
+  margin-right: 3%;
+  border: none;
+  outline: none;
+}
+.pol-text {
+  font-size: small;
+  margin-bottom: 2%;
+}
+a {
+  color: skyblue;
+  text-decoration: none;
+}
+a:hover {
+  color: steelblue;
+}
+.btn {
+  width: 100%;
+  margin-bottom: 4%;
+}
+.btn > button {
+  background-color: steelblue;
+  height: 35px;
+  width: 80%;
+}
+.r {
+  float: right;
 }
